--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
         <i class="fas fa-plus"></i> Add note
     </button>
     
-    <div class="note">
+    <!-- Temporal HTML Template -->
+    <!-- <div class="note">
         <div class="tools">
             <button class="edit"><i class="fas fa-edit"></i></button>
             <button class="delete"><i class="fas fa-trash-alt"></i></button>
         </div>
 
-        <div class="hidden"></div>
+        <div class="main"></div>
         <textarea></textarea>
-
-    </div>
+    </div> -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/11.1.0/marked.min.js" integrity="sha512-49xmrP3uviO3RLWud0G4giZPhidSGQMjdsX3AkGH0tW4q1FN1nzTa4WGhyKIl+sggfI2q9rB78y/HvVK2HbVnA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="app.js"></script>
